// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`addImportantToEachRule() > should add !important to each rule 1`] = `
{
  "&:hover": {
    "&:focus": {
      "color": "orange !important",
    },
    "color": "blue !important",
  },
  "color": "red !important",
  "content": """ !important",
  "display": "block !important",
  "margin": "0 !important",
}
`;

exports[`getHiddenTextStyles() > should return correct JssStyle for isHidden: false and shownStyles: { width: 'fit-content' } 1`] = `
{
  "clip": "auto",
  "height": "auto",
  "margin": 0,
  "overflow": "visible",
  "padding": 0,
  "position": "static",
  "whiteSpace": "normal",
  "width": "fit-content",
}
`;

exports[`getHiddenTextStyles() > should return correct JssStyle for isHidden: false and shownStyles: undefined 1`] = `
{
  "clip": "auto",
  "height": "auto",
  "margin": 0,
  "overflow": "visible",
  "padding": 0,
  "position": "static",
  "whiteSpace": "normal",
  "width": "auto",
}
`;

exports[`getHiddenTextStyles() > should return correct JssStyle for isHidden: true and shownStyles: { width: 'fit-content' } 1`] = `
{
  "clip": "rect(0,0,0,0)",
  "height": "1px",
  "margin": "-1px",
  "overflow": "hidden",
  "padding": 0,
  "position": "absolute",
  "whiteSpace": "nowrap",
  "width": "1px",
}
`;

exports[`getHiddenTextStyles() > should return correct JssStyle for isHidden: true and shownStyles: undefined 1`] = `
{
  "clip": "rect(0,0,0,0)",
  "height": "1px",
  "margin": "-1px",
  "overflow": "hidden",
  "padding": 0,
  "position": "absolute",
  "whiteSpace": "nowrap",
  "width": "1px",
}
`;

exports[`getTransition() > should for : 'box-shadow var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) var(--p-transition-duration, 0.6s)' return: box-shadow > box-shadow var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) var(--p-transition-duration, 0.6s) 1`] = `"box-shadow var(--p-transition-duration, .6s) cubic-bezier(.4,0,.5,1) var(--p-transition-duration, .6s)"`;

exports[`getTransition() > should for : 'box-shadow var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) var(--p-transition-duration, 0.25s)' return: box-shadow > box-shadow var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) var(--p-transition-duration, 0.25s) 1`] = `"box-shadow var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1) var(--p-transition-duration, .25s)"`;

exports[`getTransition() > should for : 'color var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1) var(--p-transition-duration, 0.4s)' return: color > color var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1) var(--p-transition-duration, 0.4s) 1`] = `"color var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1) var(--p-transition-duration, .4s)"`;

exports[`getTransition() > should for : 'color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)' return: color > color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) 1`] = `"color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1)"`;

exports[`getTransition() > should for : 'color var(--p-transition-duration, 1.2s) linear var(--p-transition-duration, 1.2s)' return: color > color var(--p-transition-duration, 1.2s) linear var(--p-transition-duration, 1.2s) 1`] = `"color var(--p-transition-duration, 1.2s) linear var(--p-transition-duration, 1.2s)"`;
